--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,20 +30,20 @@
         android:textColor="#FFFFFF"
         android:textSize="20dp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/txt_PWD"
+        app:layout_constraintBottom_toBottomOf="@+id/edt_PWD"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/txt_ID"
-        app:layout_constraintTop_toTopOf="@+id/txt_ID" />
+        app:layout_constraintStart_toEndOf="@+id/edt_ID"
+        app:layout_constraintTop_toTopOf="@+id/edt_ID" />
 
     <EditText
-        android:id="@+id/txt_ID"
+        android:id="@+id/edt_ID"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="7dp"
         android:layout_marginBottom="21dp"
         android:ems="10"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/txt_PWD"
+        app:layout_constraintBottom_toTopOf="@+id/edt_PWD"
         app:layout_constraintEnd_toStartOf="@+id/btn_Login"
         app:layout_constraintStart_toEndOf="@+id/lbl_ID" />
 
@@ -57,7 +57,7 @@
         android:text="ID/PW 찾기"
         android:textColor="#FFFFFF"
         app:layout_constraintEnd_toStartOf="@+id/btn_register"
-        app:layout_constraintTop_toBottomOf="@+id/txt_PWD" />
+        app:layout_constraintTop_toBottomOf="@+id/edt_PWD" />
 
     <TextView
         android:id="@+id/lbl_ID"
@@ -69,12 +69,12 @@
         android:text="ID"
         android:textColor="#000000"
         android:textSize="30dp"
-        app:layout_constraintEnd_toStartOf="@+id/txt_ID"
+        app:layout_constraintEnd_toStartOf="@+id/edt_ID"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lbl_title" />
 
     <EditText
-        android:id="@+id/txt_PWD"
+        android:id="@+id/edt_PWD"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="7dp"
