--- a/app/src/main/res/layout/activity_content_add.xml
+++ b/app/src/main/res/layout/activity_content_add.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RegisterActivity">
+    tools:context=".ContentAdd">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,19 +12,19 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/lbl_RegTitle"
+            android:id="@+id/lbl_AddTop"
             android:layout_width="match_parent"
-            android:layout_height="115dp"
+            android:layout_height="74dp"
             android:background="#FF5722"
             android:gravity="fill"
-            android:text="Content_Messenger"
+            android:text="연락처 추가"
             android:textAlignment="center"
             android:textColor="#FFFFFF"
             android:textSize="40dp" />
 
         <ScrollView
             android:layout_width="408dp"
-            android:layout_height="611dp">
+            android:layout_height="656dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -37,28 +37,22 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/lbl_regID"
+                        android:id="@+id/lbl_AddID"
                         android:layout_width="86dp"
                         android:layout_height="45dp"
-                        android:text="*ID"
+                        android:text="ID"
                         android:textAlignment="viewEnd"
                         android:textColor="#000000"
                         android:textSize="25dp" />
 
                     <EditText
-                        android:id="@+id/edt_regID"
+                        android:id="@+id/edt_AddID"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_weight="1"
                         android:ems="10"
                         android:inputType="textPersonName" />
 
-                    <Button
-                        android:id="@+id/btn_regID"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:backgroundTint="#FF5722"
-                        android:text="중복확인"
-                        android:textColor="#FFFFFF" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -67,20 +61,34 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/lbl_regPW"
+                        android:id="@+id/lbl_AddNo"
                         android:layout_width="86dp"
-                        android:layout_height="43dp"
-                        android:text="*PW"
+                        android:layout_height="45dp"
+                        android:gravity="center"
+                        android:text="No"
                         android:textAlignment="viewEnd"
                         android:textColor="#000000"
                         android:textSize="25dp" />
 
                     <EditText
-                        android:id="@+id/edt_regPW"
+                        android:id="@+id/edt_AddNo"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_weight="1"
                         android:ems="10"
-                        android:inputType="textPassword" />
+                        android:inputType="number" />
+
+                    <Button
+                        android:id="@+id/btn_AddGrab"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="right"
+                        android:layout_weight="1"
+                        android:backgroundTint="#FF5722"
+                        android:text="정보 불러오기"
+                        android:textColor="#FFFFFF"
+                        android:textSize="15dp" />
+
                 </LinearLayout>
 
                 <LinearLayout
@@ -89,29 +97,7 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/lbl_regPW2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="44dp"
-                        android:text="*PW확인"
-                        android:textAlignment="viewEnd"
-                        android:textColor="#000000"
-                        android:textSize="25dp" />
-
-                    <EditText
-                        android:id="@+id/edt_regPW2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:ems="10"
-                        android:inputType="textPassword" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/lbl_regName"
+                        android:id="@+id/lbl_AddName"
                         android:layout_width="89dp"
                         android:layout_height="47dp"
                         android:text="*이름"
@@ -120,7 +106,7 @@
                         android:textSize="25dp" />
 
                     <EditText
-                        android:id="@+id/edt_regName"
+                        android:id="@+id/edt_AddName"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:ems="10"
@@ -133,7 +119,7 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/lbl_regPhone"
+                        android:id="@+id/lbl_AddPhone"
                         android:layout_width="90dp"
                         android:layout_height="46dp"
                         android:text="*연락처"
@@ -142,7 +128,7 @@
                         android:textSize="25dp" />
 
                     <EditText
-                        android:id="@+id/edt_regPhone"
+                        android:id="@+id/edt_AddPhone"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:ems="10"
@@ -155,7 +141,7 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/lbl_regEmail"
+                        android:id="@+id/lbl_AddEmail"
                         android:layout_width="91dp"
                         android:layout_height="46dp"
                         android:text="이메일"
@@ -164,7 +150,7 @@
                         android:textSize="25dp" />
 
                     <EditText
-                        android:id="@+id/edt_regEmail"
+                        android:id="@+id/edt_AddEmail"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:ems="10"
@@ -178,7 +164,7 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/lbl_regHome"
+                        android:id="@+id/lbl_AddHome"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:gravity="bottom"
@@ -194,7 +180,7 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/lbl_regLati"
+                        android:id="@+id/lbl_AddLati"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Latitude"
@@ -202,14 +188,14 @@
                         android:textSize="25dp" />
 
                     <EditText
-                        android:id="@+id/edt_regLati"
+                        android:id="@+id/edt_AddLati"
                         android:layout_width="103dp"
                         android:layout_height="41dp"
                         android:ems="10"
                         android:inputType="number" />
 
                     <TextView
-                        android:id="@+id/lbl_regLong"
+                        android:id="@+id/lbl_AddLong"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Longitude"
@@ -217,78 +203,12 @@
                         android:textSize="25dp" />
 
                     <EditText
-                        android:id="@+id/edt_regLong"
+                        android:id="@+id/edt_AddLong"
                         android:layout_width="103dp"
                         android:layout_height="41dp"
                         android:ems="10"
                         android:inputType="number" />
 
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="52dp"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/lbl_regHome2"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:gravity="bottom"
-                        android:text="아이디/비밀번호 찾기 질문/답"
-                        android:textAlignment="viewStart"
-                        android:textColor="#000000"
-                        android:textSize="25dp" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/lbl_regQ"
-                        android:layout_width="1dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="*질문"
-                        android:textAlignment="textEnd"
-                        android:textColor="#000000"
-                        android:textSize="25dp" />
-
-                    <EditText
-                        android:id="@+id/edt_regQ"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:ems="10"
-                        android:inputType="textPersonName" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/lbl_regA"
-                        android:layout_width="1dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="*답변"
-                        android:textAlignment="textEnd"
-                        android:textColor="#000000"
-                        android:textSize="25dp" />
-
-                    <EditText
-                        android:id="@+id/edt_regA"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:ems="10"
-                        android:inputType="textPersonName" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -298,12 +218,12 @@
                     android:orientation="horizontal">
 
                     <Button
-                        android:id="@+id/btn_regSuccess"
+                        android:id="@+id/btn_AddSuccess"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="right"
                         android:backgroundTint="#FF5722"
-                        android:text="회원가입"
+                        android:text="연락처 추가"
                         android:textColor="#FFFFFF"
                         android:textSize="20dp" />
                 </LinearLayout>
@@ -311,5 +231,4 @@
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
