--- a/app/src/main/res/layout/activity_main_content.xml
+++ b/app/src/main/res/layout/activity_main_content.xml
@@ -6,4 +6,79 @@
     android:layout_height="match_parent"
     tools:context=".MainContent">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/lbl_MainTop"
+            android:layout_width="match_parent"
+            android:layout_height="74dp"
+            android:background="#FF5722"
+            android:gravity="fill"
+            android:textAlignment="center"
+            android:textColor="#FFFFFF"
+            android:textSize="20dp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#FF5722"
+            android:gravity="right"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/btn_MyInfo"
+                android:layout_width="115dp"
+                android:layout_height="wrap_content"
+                android:background="#FFC107"
+                android:text="내 정보" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="491dp"
+            android:orientation="vertical">
+
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <ListView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
+                </LinearLayout>
+            </ScrollView>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#FF5722"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btn_ContentAdd"
+                android:layout_width="109dp"
+                android:layout_height="wrap_content"
+                android:background="#FFC107"
+                android:text="연락처 추가" />
+
+            <Button
+                android:id="@+id/button2"
+                android:layout_width="106dp"
+                android:layout_height="wrap_content"
+                android:background="#FFC107"
+                android:text="Button" />
+        </LinearLayout>
+
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
