--- a/app/src/main/res/layout/activity_my_info.xml
+++ b/app/src/main/res/layout/activity_my_info.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RegisterActivity">
+    tools:context=".MyInfo">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,19 +12,19 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/lbl_RegTitle"
+            android:id="@+id/lbl_MyTop"
             android:layout_width="match_parent"
-            android:layout_height="115dp"
+            android:layout_height="74dp"
             android:background="#FF5722"
             android:gravity="fill"
-            android:text="Content_Messenger"
+            android:text="내 정보 수정"
             android:textAlignment="center"
             android:textColor="#FFFFFF"
             android:textSize="40dp" />
 
         <ScrollView
             android:layout_width="408dp"
-            android:layout_height="611dp">
+            android:layout_height="656dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -37,28 +37,22 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/lbl_regID"
+                        android:id="@+id/lbl_myNo"
                         android:layout_width="86dp"
                         android:layout_height="45dp"
-                        android:text="*ID"
+                        android:gravity="center"
+                        android:text="No : "
                         android:textAlignment="viewEnd"
                         android:textColor="#000000"
                         android:textSize="25dp" />
 
-                    <EditText
-                        android:id="@+id/edt_regID"
-                        android:layout_width="wrap_content"
+                    <TextView
+                        android:id="@+id/lbl_myNo2"
+                        android:layout_width="324dp"
                         android:layout_height="wrap_content"
-                        android:ems="10"
-                        android:inputType="textPersonName" />
+                        android:textColor="#000000"
+                        android:textSize="25dp" />
 
-                    <Button
-                        android:id="@+id/btn_regID"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:backgroundTint="#FF5722"
-                        android:text="중복확인"
-                        android:textColor="#FFFFFF" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -67,7 +61,31 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/lbl_regPW"
+                        android:id="@+id/lbl_myID"
+                        android:layout_width="86dp"
+                        android:layout_height="45dp"
+                        android:text="ID : "
+                        android:textAlignment="viewEnd"
+                        android:textColor="#000000"
+                        android:textSize="25dp" />
+
+                    <TextView
+                        android:id="@+id/lbl_myID2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:textColor="#000000"
+                        android:textSize="25dp" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/lbl_myPW"
                         android:layout_width="86dp"
                         android:layout_height="43dp"
                         android:text="*PW"
@@ -76,7 +94,7 @@
                         android:textSize="25dp" />
 
                     <EditText
-                        android:id="@+id/edt_regPW"
+                        android:id="@+id/edt_myPW"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:ems="10"
@@ -89,7 +107,7 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/lbl_regPW2"
+                        android:id="@+id/lbl_myPW2"
                         android:layout_width="wrap_content"
                         android:layout_height="44dp"
                         android:text="*PW확인"
@@ -98,7 +116,7 @@
                         android:textSize="25dp" />
 
                     <EditText
-                        android:id="@+id/edt_regPW2"
+                        android:id="@+id/edt_myPW2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:ems="10"
@@ -111,7 +129,7 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/lbl_regName"
+                        android:id="@+id/lbl_myName"
                         android:layout_width="89dp"
                         android:layout_height="47dp"
                         android:text="*이름"
@@ -120,7 +138,7 @@
                         android:textSize="25dp" />
 
                     <EditText
-                        android:id="@+id/edt_regName"
+                        android:id="@+id/edt_myName"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:ems="10"
@@ -133,7 +151,7 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/lbl_regPhone"
+                        android:id="@+id/lbl_myPhone"
                         android:layout_width="90dp"
                         android:layout_height="46dp"
                         android:text="*연락처"
@@ -142,7 +160,7 @@
                         android:textSize="25dp" />
 
                     <EditText
-                        android:id="@+id/edt_regPhone"
+                        android:id="@+id/edt_myPhone"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:ems="10"
@@ -155,7 +173,7 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/lbl_regEmail"
+                        android:id="@+id/lbl_myEmail"
                         android:layout_width="91dp"
                         android:layout_height="46dp"
                         android:text="이메일"
@@ -164,7 +182,7 @@
                         android:textSize="25dp" />
 
                     <EditText
-                        android:id="@+id/edt_regEmail"
+                        android:id="@+id/edt_myEmail"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:ems="10"
@@ -178,7 +196,7 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/lbl_regHome"
+                        android:id="@+id/lbl_myHome"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:gravity="bottom"
@@ -194,7 +212,7 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/lbl_regLati"
+                        android:id="@+id/lbl_myLati"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Latitude"
@@ -202,14 +220,14 @@
                         android:textSize="25dp" />
 
                     <EditText
-                        android:id="@+id/edt_regLati"
+                        android:id="@+id/edt_myLati"
                         android:layout_width="103dp"
                         android:layout_height="41dp"
                         android:ems="10"
                         android:inputType="number" />
 
                     <TextView
-                        android:id="@+id/lbl_regLong"
+                        android:id="@+id/lbl_myLong"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Longitude"
@@ -217,7 +235,7 @@
                         android:textSize="25dp" />
 
                     <EditText
-                        android:id="@+id/edt_regLong"
+                        android:id="@+id/edt_myLong"
                         android:layout_width="103dp"
                         android:layout_height="41dp"
                         android:ems="10"
@@ -231,7 +249,7 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/lbl_regHome2"
+                        android:id="@+id/lbl_myQA"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
@@ -248,7 +266,7 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/lbl_regQ"
+                        android:id="@+id/lbl_myQ"
                         android:layout_width="1dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -258,7 +276,7 @@
                         android:textSize="25dp" />
 
                     <EditText
-                        android:id="@+id/edt_regQ"
+                        android:id="@+id/edt_myQ"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -273,7 +291,7 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/lbl_regA"
+                        android:id="@+id/lbl_myA"
                         android:layout_width="1dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -283,7 +301,7 @@
                         android:textSize="25dp" />
 
                     <EditText
-                        android:id="@+id/edt_regA"
+                        android:id="@+id/edt_myA"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -298,12 +316,12 @@
                     android:orientation="horizontal">
 
                     <Button
-                        android:id="@+id/btn_regSuccess"
+                        android:id="@+id/btn_MyInfoSuccess"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="right"
                         android:backgroundTint="#FF5722"
-                        android:text="회원가입"
+                        android:text="정보 수정"
                         android:textColor="#FFFFFF"
                         android:textSize="20dp" />
                 </LinearLayout>
@@ -311,5 +329,4 @@
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
