--- a/app/src/main/res/layout/activity_find_idpw.xml
+++ b/app/src/main/res/layout/activity_find_idpw.xml
@@ -23,6 +23,7 @@
             android:textSize="40dp" />
 
         <TabHost
+            android:id="@+id/tabhost"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
