6 / 11 지도보기 구현

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -206,7 +206,7 @@
                         android:layout_width="103dp"
                         android:layout_height="41dp"
                         android:ems="10"
-                        android:inputType="number" />
+                        android:inputType="textPersonName" />
 
                     <TextView
                         android:id="@+id/lbl_regLong"
@@ -221,7 +221,7 @@
                         android:layout_width="103dp"
                         android:layout_height="41dp"
                         android:ems="10"
-                        android:inputType="number" />
+                        android:inputType="textPersonName" />
 
                 </LinearLayout>
 
