--- a/app/src/main/res/layout/activity_contact_add.xml
+++ b/app/src/main/res/layout/activity_contact_add.xml
@@ -107,7 +107,7 @@
 
                     <EditText
                         android:id="@+id/edt_AddName"
-                        android:layout_width="wrap_content"
+                        android:layout_width="316dp"
                         android:layout_height="wrap_content"
                         android:ems="10"
                         android:inputType="textPersonName" />
@@ -129,7 +129,7 @@
 
                     <EditText
                         android:id="@+id/edt_AddPhone"
-                        android:layout_width="wrap_content"
+                        android:layout_width="315dp"
                         android:layout_height="wrap_content"
                         android:ems="10"
                         android:inputType="phone" />
@@ -151,7 +151,7 @@
 
                     <EditText
                         android:id="@+id/edt_AddEmail"
-                        android:layout_width="wrap_content"
+                        android:layout_width="316dp"
                         android:layout_height="wrap_content"
                         android:ems="10"
                         android:inputType="textEmailAddress" />
@@ -189,10 +189,17 @@
 
                     <EditText
                         android:id="@+id/edt_AddLati"
-                        android:layout_width="103dp"
+                        android:layout_width="320dp"
                         android:layout_height="41dp"
                         android:ems="10"
-                        android:inputType="number" />
+                        android:inputType="textPersonName" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/lbl_AddLong"
@@ -204,11 +211,10 @@
 
                     <EditText
                         android:id="@+id/edt_AddLong"
-                        android:layout_width="103dp"
+                        android:layout_width="293dp"
                         android:layout_height="41dp"
                         android:ems="10"
-                        android:inputType="number" />
-
+                        android:inputType="textPersonName" />
                 </LinearLayout>
 
                 <LinearLayout
