--- a/app/src/main/res/layout/activity_contact_info.xml
+++ b/app/src/main/res/layout/activity_contact_info.xml
@@ -195,6 +195,13 @@
                         android:textColor="#000000"
                         android:textSize="25dp" />
 
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
                     <TextView
                         android:id="@+id/lbl_ContactLong"
                         android:layout_width="wrap_content"
@@ -211,7 +218,6 @@
                         android:textAlignment="viewStart"
                         android:textColor="#000000"
                         android:textSize="25dp" />
-
                 </LinearLayout>
 
             </LinearLayout>
