--- a/app/src/main/res/layout/activity_contact_modify.xml
+++ b/app/src/main/res/layout/activity_contact_modify.xml
@@ -200,6 +200,13 @@
                         android:ems="10"
                         android:inputType="textPersonName" />
 
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
                     <TextView
                         android:id="@+id/lbl_ModifyLong"
                         android:layout_width="wrap_content"
@@ -215,7 +222,6 @@
                         android:layout_weight="1"
                         android:ems="10"
                         android:inputType="textPersonName" />
-
                 </LinearLayout>
 
             </LinearLayout>
