--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_marginBottom="172dp"
         android:background="#FF5722"
         android:gravity="fill"
-        android:text="Content_Messenger"
+        android:text="Contact_Messenger"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="40dp"
@@ -56,7 +56,7 @@
         android:layout_marginTop="46dp"
         android:layout_marginEnd="28dp"
         android:backgroundTint="#FF5722"
-        android:text="ID/PW 찾기"
+        android:text="PW 찾기"
         android:textColor="#FFFFFF"
         app:layout_constraintEnd_toStartOf="@+id/btn_register"
         app:layout_constraintTop_toBottomOf="@+id/edt_PWD" />
