--- a/app/src/main/res/layout/activity_my_info.xml
+++ b/app/src/main/res/layout/activity_my_info.xml
@@ -224,7 +224,7 @@
                         android:layout_width="103dp"
                         android:layout_height="41dp"
                         android:ems="10"
-                        android:inputType="number" />
+                        android:inputType="textPersonName" />
 
                     <TextView
                         android:id="@+id/lbl_myLong"
@@ -239,7 +239,7 @@
                         android:layout_width="103dp"
                         android:layout_height="41dp"
                         android:ems="10"
-                        android:inputType="number" />
+                        android:inputType="textPersonName" />
 
                 </LinearLayout>
 
